Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
 
 <p>First a constraint graph of the board is drawn and each square can be colored in 10 ways (0-9) with the squares connected by an edge getting different colors.</p>
 
+<p><img src="https://github.com/deerishi/sudoku-as-graph-coloring-and-constraint-satisfaction-problem/blob/master/sudoku.PNG?raw=true" alt="Sudoku"></p>
+
+<p>(Image from Google Search Results)</p>
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/deerishi/sudoku-as-graph-coloring-and-constraint-satisfaction-problem">Sudoku as graph coloring and constraint satisfaction problem (C++)</a> is maintained by <a href="https://github.com/deerishi">deerishi</a>.</span>
 
